# timedomainresonance

./: CMakeLists.txt  Plot data.ipynb  gc.i  main.cpp  model.lyx  pmovie.py  ptime.py  run.py  testing.ipynb  timedomain.cpp  timedomain.i  timedomain.ipynb
src/: arma_numpy.cpp  arma_numpy.h  solution.cpp  solution.h  solutionatgp.cpp  solutionatgp.h  solutioninstance.cpp  solutioninstance.h  tube.cpp  tube.h
